# robotics_lpnu

./: README.md
docker/: .dockerignore  Dockerfile
lab1/: README.md
lab1/worlds/: robot.sdf
lab2/: README.md  package.xml  setup.py
lab2/config/: robot.rviz
lab2/lab2/: lidar_subscriber.py  robot_controller.py
lab2/launch/: gazebo_ros2.launch.py
lab3/: README.md  package.xml  setup.py
lab3/lab3/: circle_path.py  diff_drive_math.py  figure_8_path.py  odom_path_publisher.py  square_path.py  velocity_publisher.py
lab3/launch/: bringup.launch.py  gazebo.launch.py  turtlebot3_room.launch.py  turtlebot3_room_bringup.launch.py
lab3/rviz/: trajectory.rviz
lab3/turtlebot3/: README.md
lab3/turtlebot3/urdf/: README.md
lab3/turtlebot3/worlds/: room.sdf
lab3/turtlebot3/xacro/: simple_diff_drive.urdf.xacro
lab3/worlds/: robot.sdf
lab4/: README.md  package.xml  setup.py
lab4/lab4/: dead_reckoning.py
lab4/launch/: dead_reckoning_bringup.launch.py
lab4/rviz/: dead_reckoning.rviz
lab5/: README.md  package.xml  setup.py
lab5/lab5/: obstacle_avoidance.py
lab5/launch/: obstacle_avoidance_bringup.launch.py
lab5/rviz/: obstacle_avoidance.rviz
lab6/: README.md  package.xml  setup.py
lab6/config/: nav2_params.yaml
lab6/launch/: nav2_room_bringup.launch.py
lab6/maps/: room_nav2.pgm  room_nav2.yaml
lab6/scripts/: generate_room_nav2_map.py
lab6/worlds/: room_nav2.sdf
lab7/: README.md  package.xml  setup.py
lab7/config/: rtr_controllers.yaml
lab7/lab7/: __init__.py  rtr_kinematics.py  tf2_broadcaster_demo.py  tf2_demo_cli.py  tf2_listener_demo.py
lab7/launch/: rtr_ros2_control.launch.py  rtr_visualize.launch.py
lab7/rviz/: rtr.rviz
lab7/tests/: test_rtr_kinematics.py  test_tf2_analytic_agreement.py
lab7/urdf/: rtr_manipulator.xacro
scripts/: cmd
